# Python_Library

./: .gitignore  README.md  app.py  pyproject.toml
python-library-frontend/: index.html  package-lock.json  package.json
python-library-frontend/src/: App.jsx
python-library-frontend/src/api/: axios.js
python-library-frontend/src/components/: BookList.jsx  ClientForm.jsx  ClientList.jsx  LoanForm.css  LoanForm.jsx  Navbar.jsx
python_library/: __init__.py  models.py  routes.py  seed.py
python_library/routes/: author.py  book.py  branch.py  client.py  collection.py  language.py  loan.py  physicalBook.py  publisher.py  reports.py  reserve.py  review.py
