[project]
name = "python-library"
version = "0.1.0"
description = ""
authors = [
    {name = "GhortheBrute",email = "143045110+GhortheBrute@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
