[tool.poetry]
name = "python-library"
version = "0.1.0"
description = ""
authors = ["GhortheBrute <143045110+GhortheBrute@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
flask = "==3.1.2"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
pymysql = ">=1.1.2,<2.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
faker = "^37.12.0"
flasgger = "^0.9.7.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"